--- a/components/financial_assistance/app/views/financial_assistance/shared/_status_header.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/shared/_status_header.html.erb
@@ -1,10 +1,10 @@
 <div class="row app-year-header">
   <div class="col-xs-4 app-year-column">
     <div class="row text-center">
-      <%= application.assistance_year.to_s[0..1] %>
+      <%= assistance_year[0..1] %>
     </div>
     <div class="row text-center">
-      <b><%= application.assistance_year.to_s[2..3] %></b>
+      <b><%= assistance_year[2..3] %></b>
     </div>
   </div>
   <div class="col-xs-8 app-year-title">
