--- a/components/financial_assistance/app/views/financial_assistance/applications/review_and_submit.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applications/review_and_submit.html.erb
@@ -192,7 +192,7 @@
                 </div>
 
                 <div class="row row-form-wrapper ptb no-buffer row-height form-content">
-                  <div class="col-md-6"><%= l10n('faa.incomes.from_employer', assistance_year: FinancialAssistanceRegistry[:enrollment_dates].setting(:application_year).item.constantize.new.call.value!.to_s) %>
+                  <div class="col-md-6"><%= l10n('faa.incomes.from_employer', assistance_year: assistance_year) %>
                   </div>
                   <div class="col-md-6"><%= human_boolean applicant.has_job_income %></div>
                 </div>
@@ -243,13 +243,13 @@
                 <% end %>
 
                 <div class="row row-form-wrapper ptb no-buffer row-height form-content">
-                  <div class="col-md-6"><%= l10n('faa.incomes.from_self_employment', assistance_year: FinancialAssistanceRegistry[:enrollment_dates].setting(:application_year).item.constantize.new.call.value!.to_s) %></div>
+                  <div class="col-md-6"><%= l10n('faa.incomes.from_self_employment', assistance_year: assistance_year) %></div>
                   <div class="col-md-6"><%= human_boolean applicant.has_self_employment_income %></div>
                 </div>
 
                 <% if FinancialAssistanceRegistry.feature_enabled?(:unemployment_income) %>
                   <div class="row row-form-wrapper ptb no-buffer row-height form-content">
-                    <div class="col-md-6"><%= l10n('faa.other_incomes.unemployment', assistance_year: FinancialAssistanceRegistry[:enrollment_dates].setting(:application_year).item.constantize.new.call.value!.to_s) %>
+                    <div class="col-md-6"><%= l10n('faa.other_incomes.unemployment', assistance_year: assistance_year) %>
                     </div>
                     <div class="col-md-6"><%= human_boolean applicant.has_unemployment_income %></div>
                   </div>
@@ -264,7 +264,7 @@
                 <% end %>
 
                 <div class="row row-form-wrapper ptb no-buffer row-height form-content">
-                  <div class="col-md-6"><%= l10n('faa.other_incomes.other_sources', assistance_year: FinancialAssistanceRegistry[:enrollment_dates].setting(:application_year).item.constantize.new.call.value!.to_s) %>
+                  <div class="col-md-6"><%= l10n('faa.other_incomes.other_sources', assistance_year: assistance_year) %>
                   </div>
                   <div class="col-md-6"><%= human_boolean applicant.has_other_income %></div>
                 </div>
@@ -281,7 +281,7 @@
                 </div>
 
                 <div class="row row-form-wrapper ptb no-buffer row-height form-content">
-                  <div class="col-md-6"><%= l10n('faa.deductions.income_adjustments', assistance_year: FinancialAssistanceRegistry[:enrollment_dates].setting(:application_year).item.constantize.new.call.value!.to_s) %>
+                  <div class="col-md-6"><%= l10n('faa.deductions.income_adjustments', assistance_year: assistance_year) %>
                   </div>
                   <div class="col-md-6"><%= human_boolean applicant.has_deductions %></div>
                 </div>
