--- a/components/financial_assistance/app/views/financial_assistance/incomes/other.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/incomes/other.html.erb
@@ -19,7 +19,7 @@
     <% if FinancialAssistanceRegistry.feature_enabled?(:unemployment_income) %>
       <div class="row row-form-wrapper radio-align no-buffer fa-align-elements">
         <div class='col-md-6 labelforcoverage'>
-          <span class="fa-text-color"><%= l10n('faa.other_incomes.unemployment', assistance_year: FinancialAssistanceRegistry[:enrollment_dates].setting(:application_year).item.constantize.new.call.value!.to_s) %></span>
+          <span class="fa-text-color"><%= l10n('faa.other_incomes.unemployment', assistance_year: assistance_year) %></span>
         </div>
         <div class='col-md-6 mt11'>
           <div class='col-md-3 no-padding'>
@@ -54,7 +54,7 @@
 
     <div class="driver-question row row-form-wrapper radio-align no-buffer fa-align-elements">
       <div class='col-md-6 labelforcoverage'>
-        <span class="fa-text-color"><%= l10n('faa.other_incomes.other_sources', assistance_year: FinancialAssistanceRegistry[:enrollment_dates].setting(:application_year).item.constantize.new.call.value!.to_s) %></span>
+        <span class="fa-text-color"><%= l10n('faa.other_incomes.other_sources', assistance_year: assistance_year) %></span>
       </div>
       <div class='col-md-6 mt11'>
         <div class='col-md-3 no-padding'>
