--- a/app/views/insured/families/home.html.erb
+++ b/app/views/insured/families/home.html.erb
@@ -14,7 +14,7 @@
     <%= render 'employer_panel', employee_role: employee_role if newhire_enrollment_eligible?(employee_role) %>
   <% end %>
 
-  <%= render 'sep_message', locals: {family_id: @family.id.to_s} if @active_sep.present? && (EnrollRegistry.feature_enabled?(:show_sep_message) || @active_sep.qualifying_life_event_kind.active?) %>
+  <%= render 'sep_message', locals: {family_id: @family.id.to_s} if @active_sep.present? %>
 
   <div class="my-account-page">
     <h1 class="heading-text mt-0"><%= l10n("my_site_short_name", site_short_name: site_short_name) %></h1>
@@ -24,7 +24,7 @@
     <div class="col-md-8">
       <%= render partial: 'employers_selection' if @person.has_multiple_active_employers? %>
       <%= render partial: 'qle_detail' %>
-      <%= render partial: 'qle_detail_for_existing_sep' if @active_sep.present? && (EnrollRegistry.feature_enabled?(:show_sep_message) || @active_sep.qualifying_life_event_kind.active?) %>
+      <%= render partial: 'qle_detail_for_existing_sep' if @active_sep.present? %>
 
       <% if pundit_allow(Family, :can_view_entire_family_enrollment_history?) %>
         <% enrollments = @all_hbx_enrollments_for_admin %>
