--- a/app/javascript/css/forms.scss
+++ b/app/javascript/css/forms.scss
@@ -1,3 +1,19 @@
+#personal_info {
+  input:not([type='checkbox']):not([type='radio']):not(.ssn-input),
+  select,
+  .input {
+    width: 180px;
+  }
+
+  .no-ssn-container {
+    width: 180px;
+
+    label {
+      font-weight: normal;
+    }
+  }
+}
+
 #new_user {
   #pass_strength,
   #pass_match {
@@ -90,9 +106,37 @@ select,
   }
 }
 
-input.fake-disabled-input:not([type='submit']):disabled {
+#ssn-input-container {
+  width: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .ssn-input {
+    padding: 0px;
+    border: unset;
+    width: 120px;
+    height: 34px;
+
+    &:hover {
+      border-color: unset;
+    }
+  }
+
+  img {
+    cursor: pointer;
+  }
+}
+
+input.fake-disabled-input:not([type='submit']):disabled,
+#ssn-input-container.div-disabled {
   background: var(--grey-030);
   color: var(--default-font-color);
+
+  .ssn-input {
+    background: inherit;
+    color: inherit;
+  }
 }
 
 input[type='checkbox'],
