--- a/app/views/shared/person/_consumer_information.html.erb
+++ b/app/views/shared/person/_consumer_information.html.erb
@@ -39,7 +39,7 @@
         <%= f.label :ssn, "Social Security" %>
         <% if EnrollRegistry.feature_enabled?(:mask_ssn_ui_fields) %>
           <%= render partial: 'shared/person/consumer_ssn_field',
-            locals: { f: f, family_id: @person.try(:primary_family)&.id, temp_ssn: @temp_ssn } 
+            locals: { f: f, presenter: organize_ssn_params(f.object) } 
           %>
         <% else %>
           <%= f.text_field :ssn, placeholder: "000-00-0000", class: "required mask-ssn", disabled: readonly_status,
