--- a/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
@@ -1,14 +1,14 @@
 <% if @bs4 %>
 <div class="hidden mb-4" id="messageDeleted">
-  <div class="alert alert-info d-flex align-items-start">
+  <div class="alert alert-success d-flex align-items-start">
     <div class="d-flex pl-1">
-      <div class="info-icon icon" alt="info">&nbsp;</div>
+      <div class="success-icon icon" alt="<%= l10n("success") %>">&nbsp;</div>
     </div>
     <div class="col mr-auto p-0 align-self-center">
       <%= l10n("broker_agencies.message_deleted") %>
     </div>
     <div class="d-flex pl-1">
-      <span class="close-icon icon icon-sm pr-1" alt="Close" href="javascript;">&nbsp;<span class="sr-only">Close</span></span>
+      <span class="close-icon icon icon-sm pr-1" alt='<%= l10n("close") %>' href="javascript;">&nbsp;<span class="sr-only"><%= l10n("close") %></span></span>
     </div>
   </div>
 </div>
