flag header and fix small breakpoint button margins

--- a/app/views/insured/families/inbox.html.erb
+++ b/app/views/insured/families/inbox.html.erb
@@ -1,7 +1,7 @@
 <% if @bs4 %>
   <%= render partial: 'shared/family_side_nav' %>
-  <span class='text-right'>
-    <%= h(link_to l10n("upload_notices"), upload_notice_form_insured_families_path, class: "btn btn-primary mt-2 mt-lg-0", target: '_blank', rel: "noopener noreferrer") if current_user.has_hbx_staff_role? && EnrollRegistry.feature_enabled?(:show_upload_notices)  %>
+  <span class='text-right d-flex mt-2 mt-xl-0'>
+    <%= h(link_to l10n("upload_notices"), upload_notice_form_insured_families_path, class: "btn btn-primary mr-2", target: '_blank', rel: "noopener noreferrer") if current_user.has_hbx_staff_role? && EnrollRegistry.feature_enabled?(:show_upload_notices)  %>
     <%= h(link_to l10n(".download_tax_documents"), tax_info_url, class: "btn btn-primary", target: '_blank', rel: "noopener noreferrer") if show_download_tax_documents_button? %>
   </span>
   <%= render 'inbox', provider: @person %>
