manually call indicate method on staff load

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/new.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/new.html.erb
@@ -51,6 +51,7 @@
               data: { profile_type: "broker_agency_staff" },
               success: function (data) {
                 $("#broker_agency_staff").html(data);
+                indicateRequiredFields();
                 setTimeout(function () {
                   initDatepicker('inputStaffDOB', new Date("<%= Date.today.beginning_of_month - 90.years %>"), new Date("<%= Date.today.end_of_month - 18.years %>"));
 
