move families reroute to families table file

--- a/app/views/ui-components/bs4/v1/navs/_header.html.erb
+++ b/app/views/ui-components/bs4/v1/navs/_header.html.erb
@@ -1,7 +1,7 @@
 <span id='dchbx_enroll_date_of_record' class='hidden d-none'><%= TimeKeeper.date_of_record.iso8601 %></span>
 <header class="bg-white navbar-primary py-2 <%= 'pre_prod_nav_color' if ENV['ENROLL_REVIEW_ENVIRONMENT'] == true %>">
   <nav class="top-nav navbar navbar-expand-lg container py-1 px-0">
-    <a class="navbar-brand mr-0" href="#" title="<%= l10n('welcome.index.logo_title')%>">
+    <a id='link-home-logo' class="navbar-brand mr-0" href="#" title="<%= l10n('welcome.index.logo_title')%>">
       <%= image_pack_tag "logo_bs4_#{ENV['CLIENT'] || 'ic'}.svg", alt: "#{ENV['CLIENT']} logo"%>
     </a>
 
