--- a/app/views/insured/families/partial_layouts/_wrap_enrollments_by_year.html.erb
+++ b/app/views/insured/families/partial_layouts/_wrap_enrollments_by_year.html.erb
@@ -1,8 +1,9 @@
 <% if EnrollRegistry.feature_enabled?(:home_tiles_group_by_year) %>
+  <% puts "\n\n\n\n\n" %>
   <% if @year_display != hbx_enrollment.effective_on.year %>
       <% @year_display = hbx_enrollment.effective_on.year %>
-      <div id="title-<%=@year_display %>" class="module year-group-title <%= "initially_hidden_enrollment hidden" if initially_hide_enrollment?(hbx_enrollment) %> ">
-        <h2 class="text-left"><%= l10n("insured.year_title", year: @year_display) %></h2>
+      <div id="title-<%=@year_display %>" class="module year-group-title <%= "initially_hidden_enrollment hidden" if initially_hide_enrollment?(hbx_enrollment) || (defined?(edit_plan) && edit_plan == true) %> ">
+        <h2 class="text-left"><%= l10n("insured.year_title", year: @year_display) %> <%= @bs4 ? l10n('coverage') : '' %></h2>
       </div>
     <% else %>
       <script>
