--- a/app/views/shared/plan_shoppings/_sbc_link.html.erb
+++ b/app/views/shared/plan_shoppings/_sbc_link.html.erb
@@ -9,23 +9,25 @@
   <% text_class = "health" %>
   <% text_class = "dental" unless plan_kind == "health" %>
 
-  <% key, bucket = get_key_and_bucket(plan.sbc_document.identifier) %>
-  <% plan_name = plan.try(:title) || plan.try(:name) %>
-  <% id = (defined? hbx_id) ? "plan_doc_#{hbx_id}" : "summary_benefits" %>
-  <a href="<%= main_app.document_product_sbc_download_path(plan.sbc_document.id) + "?product_id=#{plan.id}&content_type=application/pdf&filename=#{plan_name.gsub(/[^0-9a-z]/i,'')}.pdf&disposition=inline" %>" class="sbc_link <%= text_class %> vertically-aligned-row" target="_blank" rel="noopener noreferrer" id="<%= id %>">
-    <% if @bs4 %>
-      <% link_text = "View Summary of Benefits & Coverage (PDF)" %>
-      <span class="<%= link_text_class %> col-xs-11 enrollment-tile-summary"><%= link_text %></span>
-    <% elsif custom_css.present? %>
-      <div class="fa-icon-label <%= text_class %> col-xs-11 enrollment-tile-summary" style="display: inline; font-size: 10px;"><%= link_text %></div>
-    <% else %>
-      <i class="far fa-file-pdf fa-2x <%= icon_class %>" ></i>
-      <span class = "<%= link_text_class %> col-xs-11 enrollment-tile-summary"><%= link_text %></span>
-    <% end %>
-  </a>
+  <% if plan&.sbc_document&.identifier %>
+    <% key, bucket = get_key_and_bucket(plan.sbc_document.identifier) %>
+    <% plan_name = plan.try(:title) || plan.try(:name) %>
+    <% id = (defined? hbx_id) ? "plan_doc_#{hbx_id}" : "summary_benefits" %>
+    <a href="<%= main_app.document_product_sbc_download_path(plan.sbc_document.id) + "?product_id=#{plan.id}&content_type=application/pdf&filename=#{plan_name.gsub(/[^0-9a-z]/i,'')}.pdf&disposition=inline" %>" class="sbc_link <%= text_class %> vertically-aligned-row" target="_blank" rel="noopener noreferrer" id="<%= id %>">
+      <% if @bs4 %>
+        <% link_text = "View Summary of Benefits & Coverage (PDF)" %>
+        <span class="<%= link_text_class %> col-xs-11 enrollment-tile-summary"><%= link_text %></span>
+      <% elsif custom_css.present? %>
+        <div class="fa-icon-label <%= text_class %> col-xs-11 enrollment-tile-summary" style="display: inline; font-size: 10px;"><%= link_text %></div>
+      <% else %>
+        <i class="far fa-file-pdf fa-2x <%= icon_class %>" ></i>
+        <span class = "<%= link_text_class %> col-xs-11 enrollment-tile-summary"><%= link_text %></span>
+      <% end %>
+    </a>
+  <% end %>
 <% else %>
   <a class="vertically-aligned-row" data-target="#">
     <i class="far fa-file-pdf fa-2x  <%= text_class %> no-plan-sbc-doc-found"></i>
     <span class="<%= link_text_class %> col-xs-11 enrollment-tile-summary">No Document Found</span>
   </a>
-<% end %>
+<% end %> 
