--- a/app/views/insured/families/partial_layouts/_wrap_enrollments_by_year.html.erb
+++ b/app/views/insured/families/partial_layouts/_wrap_enrollments_by_year.html.erb
@@ -3,7 +3,7 @@
   <% if @year_display != hbx_enrollment.effective_on.year %>
       <% @year_display = hbx_enrollment.effective_on.year %>
       <div id="title-<%=@year_display %>" class="module year-group-title <%= "initially_hidden_enrollment hidden" if initially_hide_enrollment?(hbx_enrollment) || (defined?(edit_plan) && edit_plan == true) %> ">
-        <h2 class="text-left"><%= l10n("insured.year_title", year: @year_display) %> <%= @bs4 ? l10n('coverage') : '' %></h2>
+        <h2 class="text-left"><%= l10n("insured.year_title", year: @year_display) %> <%= @bs4 && site_key == :me ? l10n('coverage') : '' %></h2>
       </div>
     <% else %>
       <script>
